Fixed the GDPR popup's position on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,6 +21,13 @@
     main {
         margin: 0 0 0 100px;
     }
+    #gdprWindow {
+        left: 15px;
+    }
+    #gdpr {
+        bottom: 15px;
+        left: 15px;
+    }
 }
 /* Mobile */
 @media screen and (max-width: 1000px) {
